--- a/.gitignore
+++ b/.gitignore
@@ -8,15 +8,11 @@ dist/README-libopus.txt
 dist/README-opusfile.txt
 dist/README-freetype.txt
 dist/README-harfbuzz.txt
-dist/game.ilk
-dist/game.pdb
 dist/SDL2.dll
-dist/game
-dist/game.exe
-dist/client
-dist/client.exe
-dist/server
-dist/server.exe
+dist/maze-server
+dist/maze-server.exe
+dist/maze-server.ilk
+dist/maze-server.pdb
 dist/freetype-test*
 scenes/show-meshes*
 scenes/show-scene*
